--- a/demo/compose.rosbot.yaml
+++ b/demo/compose.rosbot.yaml
@@ -1,4 +1,4 @@
-# Quick Start (at fist stop ROS Master if working on host)
+# Quick Star
 # $ docker compose -f compose.rosbot.yaml up
 
 services:
@@ -11,7 +11,6 @@ services:
       - nav2config:/ros2_ws/config/nav2:ro
     restart: unless-stopped
     command: ros2 launch rosbot_xl_bringup diff_drive.launch.py
-    # command: sleep 3600
 
   microros:
     image: microros/micro-ros-agent:galactic
