--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -7,19 +7,27 @@ WORKDIR /ros2_ws
 
 COPY . .
 
-# install dependencies
-RUN apt-get update && apt-get upgrade -y && apt install -y \
+# install everything needed
+RUN apt-get update && apt-get install -y \
         python3-pip \
-        python3-colcon-common-extensions && \
-    source /opt/ros/$ROS_DISTRO/setup.bash && \
+        python3-colcon-common-extensions \
+        python3-rosdep && \
+    apt-get upgrade -y && \
+    # build & install ROSbot XL packages
+    source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+    rosdep init && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
     colcon build --symlink-install && \
+    # make the image smaller
+    export SUDO_FORCE_REMOVE=yes && \
+    apt-get remove -y \
+        python3-pip \
+        python3-colcon-common-extensions \
+        python3-rosdep && \       
     apt-get autoremove -y && \
-    rm -rf log/ build/ src/ && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# replace entrypoint
 ENTRYPOINT ["/ros2_ws/ros_entrypoint.sh"]
 
