--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -14,7 +14,8 @@ RUN rm -rf src/rosbot_xl_gazebo && \
     apt-get update && apt-get install -y \
         python3-pip \
         python3-colcon-common-extensions \
-        python3-rosdep && \
+        python3-rosdep \
+        ros-$ROS_DISTRO-teleop-twist-keyboard && \
     apt-get upgrade -y && \
     # build & install ROSbot XL packages
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
