--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -1,3 +1,13 @@
+FROM ubuntu:20.04 AS stm32flash_builder
+
+# official releases are only for intel archs, so we need to build stm32flash from sources
+RUN apt-get update && apt-get install -y \
+        git \
+        build-essential && \
+    git clone https://github.com/stm32duino/stm32flash.git && \
+    cd stm32flash/ && \
+    make all
+
 FROM husarion/ros:galactic-ros-core
 
 # select bash as default shell
@@ -5,6 +15,7 @@ SHELL ["/bin/bash", "-c"]
 
 WORKDIR /ros2_ws
 
+COPY --from=stm32flash_builder /stm32flash/stm32flash /stm32flash
 COPY . .
 
 ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
@@ -26,8 +37,6 @@ RUN rm -rf src/rosbot_xl_gazebo && \
     colcon build --symlink-install && \
     # download a firmware binary release
     curl -L https://github.com/husarion/rosbot_xl_firmware/releases/download/v0.0.1/firmware.bin -o /firmware.bin && \
-    curl https://raw.githubusercontent.com/rogerclarkmelbourne/Arduino_STM32/master/tools/linux/stm32flash/stm32flash -o /stm32flash && \
-    chmod +x /stm32flash && \
     # make the image smaller
     export SUDO_FORCE_REMOVE=yes && \
     apt-get remove -y \
