--- a/Dockerfile.hardware
+++ b/Dockerfile.hardware
@@ -18,7 +18,7 @@ WORKDIR /ros2_ws
 COPY --from=stm32flash_builder /stm32flash/stm32flash /stm32flash
 COPY . .
 
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+# ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 
 # install everything needed
 RUN rm -rf src/rosbot_xl_gazebo && \
@@ -26,8 +26,10 @@ RUN rm -rf src/rosbot_xl_gazebo && \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
+        ros-${ROS_DISTRO}-rmw-fastrtps-cpp \
         curl \
         ros-$ROS_DISTRO-teleop-twist-keyboard && \
+    apt-get remove ros-${ROS_DISTRO}-rmw_cyclonedds_cpp && \
     apt-get upgrade -y && \
     # build & install ROSbot XL packages
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
@@ -43,6 +45,7 @@ RUN rm -rf src/rosbot_xl_gazebo && \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
+        ros-${ROS_DISTRO}-rmw-fastrtps-cpp \
         curl && \       
     apt-get autoremove -y && \
     apt-get clean && \
