--- a/demo/test/compose.rosbot.yaml
+++ b/demo/test/compose.rosbot.yaml
@@ -9,22 +9,21 @@ services:
       - /dev/ttyUSB0
     command: ros2 launch rplidar_ros2 rplidar_s1_launch.py inverted:=true
 
-  dds-router-pc:
+  dds-router-rosbot:
     image: husarnet/dds-router
     restart: unless-stopped
-    network_mode: service:husarnet-pc
+    network_mode: service:husarnet-rosbot
     environment:
       - DS_HOSTNAME=rviz2
     volumes:
-      - ./router-config.rosbot.pc.yaml:/config.yaml
+      - ./router-config.rosbot.yaml:/config.yaml
     command: bash -c "wait_ds.sh && ddsrouter -c /config.yaml -r 10"
 
-  husarnet-pc:
+  husarnet-rosbot:
     image: husarnet/husarnet
     restart: unless-stopped
     volumes:
       - /var/lib/husarnet
-      - ./id:/var/lib/husarnet/id
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0 
     cap_add:
