--- a/demo/test/router-config.pc.yaml
+++ b/demo/test/router-config.pc.yaml
@@ -1,12 +1,14 @@
 version: v2.0
 
 builtin:
+  - name: "rt/chatter"
+    type: "std_msgs::msg::dds_::String_"
   - name: "rt/scan"
     type: "sensor_msgs::msg::dds_::LaserScan_"
 
 allowlist:
-  
-  # - name: "*"
+  - name: "rt/chatter"
+    type: "std_msgs::msg::dds_::String_"
   - name: "rt/scan"
     type: "sensor_msgs::msg::dds_::LaserScan_"
 
@@ -14,7 +16,7 @@ participants:
   
   - name: LocalParticipant
     kind: local
-    domain: 0
+    domain: 1
 
   - name: ClientWAN
     kind: local-discovery-server
