--- a/demo/test/router-config.rosbot.yaml
+++ b/demo/test/router-config.rosbot.yaml
@@ -1,12 +1,14 @@
 version: v2.0
 
 builtin:
+  - name: "rt/chatter"
+    type: "std_msgs::msg::dds_::String_"
   - name: "rt/scan"
     type: "sensor_msgs::msg::dds_::LaserScan_"
 
 allowlist:
-  
-  # - name: "*"
+  - name: "rt/chatter"
+    type: "std_msgs::msg::dds_::String_"
   - name: "rt/scan"
     type: "sensor_msgs::msg::dds_::LaserScan_"
 
