--- a/demo/test/compose.rosbot.yaml
+++ b/demo/test/compose.rosbot.yaml
@@ -10,9 +10,7 @@ services:
     command: ros2 launch rplidar_ros2 rplidar_s1_launch.py inverted:=true
 
   talker:
-    build:
-      context: ../
-      dockerfile: Dockerfile
+    build: .
     command: ros2 run demo_nodes_cpp talker
 
   dds-router-rosbot:
