--- a/demo/test/compose.rosbot.yaml
+++ b/demo/test/compose.rosbot.yaml
@@ -4,19 +4,22 @@
 services:
   rplidar:
     image: husarion/rplidar:galactic
-    restart: unless-stopped
+    network_mode: service:husarnet-rosbot
+    ipc: service:husarnet-rosbot
     devices:
       - /dev/ttyUSB0
     command: ros2 launch rplidar_ros2 rplidar_s1_launch.py inverted:=true
 
   talker:
     build: .
+    network_mode: service:husarnet-rosbot
+    ipc: service:husarnet-rosbot
     command: ros2 run demo_nodes_cpp talker
 
   dds-router-rosbot:
     image: husarnet/dds-router
-    restart: unless-stopped
     network_mode: service:husarnet-rosbot
+    ipc: service:husarnet-rosbot
     environment:
       - DS_HOSTNAME=rosbot-xl
     volumes:
@@ -25,7 +28,7 @@ services:
 
   husarnet-rosbot:
     image: husarnet/husarnet
-    restart: unless-stopped
+    ipc: shareable
     volumes:
       - /var/lib/husarnet
     sysctls:
