--- a/demo/test/compose.pc.yaml
+++ b/demo/test/compose.pc.yaml
@@ -6,7 +6,8 @@
 services:
   rviz:
     image: husarion/rviz2:galactic
-    restart: unless-stopped
+    network_mode: service:husarnet-pc
+    ipc: service:husarnet-pc
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./../../config/rviz/rbxl.rviz:/root/.rviz2/default.rviz
@@ -16,23 +17,25 @@ services:
 
   listener:
     build: .
+    network_mode: service:husarnet-pc
+    ipc: service:husarnet-pc
     environment:
       - ROS_DOMAIN_ID=1
     command: ros2 run demo_nodes_cpp listener
 
   dds-router-pc:
     image: husarnet/dds-router
-    restart: unless-stopped
     network_mode: service:husarnet-pc
+    ipc: service:husarnet-pc
     environment:
       - DS_HOSTNAME=rosbot-xl
     volumes:
       - ./router-config.pc.yaml:/config.yaml
-    command: bash -c "wait_ds.sh && ddsrouter -c /config.yaml -r 10"
+    command: bash -c "wait_ds.sh && ddsrouter -c /config.yaml -r 10 -d"
 
   husarnet-pc:
     image: husarnet/husarnet
-    restart: unless-stopped
+    ipc: shareable
     volumes:
       - /var/lib/husarnet
     sysctls:
