--- a/src/rosbot_xl_description/config/controllers.yaml
+++ b/src/rosbot_xl_description/config/controllers.yaml
@@ -1,25 +1,67 @@
 controller_manager:
   ros__parameters:
-    update_rate: 50  # Hz
-
-    # rosbot_xl_hardware_controller:
-    #   type: rosbot_xl_controllers/RosbotXLSystem
-
-    velocity_controller:
-      type: velocity_controllers/JointGroupVelocityController
+    update_rate: 50 # Hz
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
+    rosbot_xl_base_controller:
+      type: diff_drive_controller/DiffDriveController
 
-velocity_controller:
+rosbot_xl_base_controller:
   ros__parameters:
-    joints:
-      - front_left_wheel_joint
-      - front_right_wheel_joint
-      - rear_left_wheel_joint
-      - rear_right_wheel_joint
-    command_interfaces:
-      - velocity
-    state_interfaces:
-      - position
-      - velocity
+    left_wheel_names: ["front_left_wheel_joint", "rear_left_wheel_joint"]
+    right_wheel_names: ["front_right_wheel_joint", "rear_right_wheel_joint"]
+
+    wheel_separation: 0.252
+    wheel_radius: 0.05
+
+    # For skid drive kinematics it will act as ICR coefficient
+    # Kinematic model with ICR coefficient isn't totally accurate and this coefficient can differ
+    # for various ground types, but checking on our office floor 1.3 looked approximately alright
+    wheel_separation_multiplier: 1.3
+
+    left_wheel_radius_multiplier: 1.0
+    right_wheel_radius_multiplier: 1.0
+
+    # Feedback from motors is published at around 20 Hz
+    publish_rate: 25.0
+    odom_frame_id: odom
+    base_frame_id: base_link
+    pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+
+    # Whether to use feedback or commands for odometry calculations
+    open_loop: false
+
+    # Update odometry from position (at the time of writing velocity update is still bugged)
+    position_feedback: true
+    enable_odom_tf: true
+
+    cmd_vel_timeout: 0.5
+    #publish_limited_velocity: true
+    use_stamped_vel: false
+    #velocity_rolling_window_size: 10
+
+    # Velocity and acceleration limits
+    # Whenever a min_* is unspecified, default to -max_*
+    linear:
+      x:
+        has_velocity_limits: true
+        has_acceleration_limits: true
+        has_jerk_limits: false
+        max_velocity: 0.5 # m/s
+        # min_velocity -  When unspecified, -max_velocity is used
+        max_acceleration: 0.5 # m/s^2
+        # min_acceleration - When unspecified, -max_acceleration is used.
+        max_jerk: 0.0 # m/s^3
+
+    angular:
+      z:
+        has_velocity_limits: true
+        has_acceleration_limits: true
+        has_jerk_limits: false
+        max_velocity: 1.0 # rad/s
+        # min_velocity -  When unspecified, -max_velocity is used
+        max_acceleration: 4.0 # rad/s^2
+        # min_acceleration - When unspecified, -max_acceleration is used.
+        max_jerk: 0.0 # rad/s^3
