--- a/src/rosbot_xl_gazebo/package.xml
+++ b/src/rosbot_xl_gazebo/package.xml
@@ -19,6 +19,7 @@
   <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>gazebo_ros_pkgs</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rosbot_xl_description</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
