--- a/demo/compose.simulation.yaml
+++ b/demo/compose.simulation.yaml
@@ -1,12 +1,10 @@
 services:
   rosbot_xl:
-    build:
-      context: ./..
-      dockerfile: ./Dockerfile.simulation
-    # image: husarion/rosbot-xl:galactic-simulation
+    # build:
+    #   context: ./..
+    #   dockerfile: ./Dockerfile.simulation
+    image: husarion/rosbot-xl:galactic-simulation
     container_name: rosbot_xl
-    tty: true
-    stdin_open: true
     runtime: nvidia
     environment:
       - "DISPLAY"
@@ -16,6 +14,5 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./../src:/ros2_ws/src
-    command: watch ls
-    # command: ros2 launch rosbot_xl_gazebo sim.launch.py
+    command: ros2 launch rosbot_xl_ignition sim.launch.py
   
