--- a/src/rosbot_xl_ignition/CMakeLists.txt
+++ b/src/rosbot_xl_ignition/CMakeLists.txt
@@ -1,11 +1,16 @@
-cmake_minimum_required(VERSION 3.5)
-project(rosbot_xl_gazebo)
+cmake_minimum_required(VERSION 3.5.0)
+project(rosbot_xl_ignition)
 
+# Default to C++14
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 11)
+endif()
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+
+if(NOT WIN32)
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
