--- a/src/rosbot_xl/package.xml
+++ b/src/rosbot_xl/package.xml
@@ -3,11 +3,12 @@
 <package format="3">
   <name>rosbot_xl</name>
   <version>2.4.0</version>
-  <description>Meta package that contains all essential packages of MoveIt 2</description>
-  <maintainer email="dominik.nowak@husarion.com">Dominik Nowak</maintainer>
+  <description>Meta package that contains all packages of Rosbot XL</description>
+  
   <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
-  <maintainer email="nikolas.duc@husarion.com">Nikolas Duc</maintainer>
   <maintainer email="maciej.stepien@husarion.com">Maciej Stepien</maintainer>
+  <maintainer email="nikolas.duc@husarion.com">Nikolas Duc</maintainer>
+  <maintainer email="dominik.nowak@husarion.com">Dominik Nowak</maintainer>
 
   <license>BSD</license>
 
@@ -15,17 +16,19 @@
   <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
   <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>
 
-  <author email="dominik.nowak@husarion.com">Dominik Nowak</author>
   <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
-  <author email="nikolas.duc@husarion.com">Nikolas Duc</author>
   <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
+  <author email="nikolas.duc@husarion.com">Nikolas Duc</author>
+  <author email="dominik.nowak@husarion.com">Dominik Nowak</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>rosbot_xl_bringup</exec_depend>
-  <exec_depend>rosbot_xl_description</exec_depend>
-  <exec_depend>rosbot_xl_ekf</exec_depend>
-  <exec_depend>rosbot_xl_hardware</exec_depend>
+  <depend>rosbot_xl_bringup</depend>
+  <depend>rosbot_xl_description</depend>
+  <depend>rosbot_xl_ekf</depend>
+  <depend>rosbot_xl_hardware</depend>
+
+  <depend condition="$ROSBOT_XL_ROS_BUILD == simulation">rosbot_xl_ignition</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
