--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -8,17 +8,17 @@ ENV ROSBOT_XL_ROS_BUILD simulation
 
 WORKDIR /ros2_ws
 
-COPY . .
 
 # install everything needed
-RUN apt-get update && apt-get install -y \
+RUN apt-get update --fix-missing && apt-get install -y \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
         python3-vcstool && \
-    apt-get upgrade -y && \
+    apt-get upgrade -y
     # build & install ROSbot XL packages
-    source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+COPY . .
+RUN source "/opt/ros/$ROS_DISTRO/setup.bash" && \
     vcs import src < src/rosbot_xl/rosbot_xl_hardware.repos && \
     vcs import src < src/rosbot_xl/rosbot_xl_simulation.repos && \
     rosdep update --rosdistro $ROS_DISTRO && \
