--- a/demo/compose.simulation.yaml
+++ b/demo/compose.simulation.yaml
@@ -1,11 +1,13 @@
 services:
   rosbot_xl:
-    # build:
-    #   context: ./..
-    #   dockerfile: ./Dockerfile.simulation
-    image: husarion/rosbot-xl:galactic-simulation
+    build:
+      context: ./..
+      dockerfile: ./Dockerfile.simulation
+    # image: husarion/rosbot-xl:galactic-simulation
     container_name: rosbot_xl
     runtime: nvidia
+    tty: true
+    stdin_open: true
     environment:
       - "DISPLAY"
       - "QT_X11_NO_MITSHM=1"
@@ -14,5 +16,6 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./../src:/ros2_ws/src
-    command: ros2 launch rosbot_xl_ignition sim.launch.py
+    command: watch ls
+    # command: ros2 launch rosbot_xl_ignition sim.launch.py
   
