--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -23,17 +23,17 @@ RUN source "/opt/ros/$ROS_DISTRO/setup.bash" && \
     vcs import src < src/rosbot_xl/rosbot_xl_simulation.repos && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    colcon build --merge-install --packages-up-to rosbot_xl && \
+    colcon build --merge-install --packages-up-to rosbot_xl
     # make the image smaller
-    export SUDO_FORCE_REMOVE=yes && \
-    apt-get remove -y \
-        python3-pip \
-        python3-colcon-common-extensions \
-        python3-rosdep \
-        python3-vcstool && \   
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    # export SUDO_FORCE_REMOVE=yes && \
+    # apt-get remove -y \
+    #     python3-pip \
+    #     python3-colcon-common-extensions \
+    #     python3-rosdep \
+    #     python3-vcstool && \   
+    # apt-get autoremove -y && \
+    # apt-get clean && \
+    # rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/ros2_ws/ros_entrypoint.sh"]
 
