--- a/src/rosbot_xl_gazebo/package.xml
+++ b/src/rosbot_xl_gazebo/package.xml
@@ -22,6 +22,7 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rosbot_xl_description</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
+  <exec_depend>gazebo_ros_pkgs</exec_depend>
   <exec_depend>xacro</exec_depend>
 
   <export>
