--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -3,11 +3,9 @@ FROM osrf/ros:galactic-desktop
 # select bash as default shell
 SHELL ["/bin/bash", "-c"]
 
-ENV IGNITION_VERSION fortress
-ENV ROSBOT_XL_ROS_BUILD simulation
-
 WORKDIR /ros2_ws
 
+COPY . .
 
 # install everything needed
 RUN apt-get update --fix-missing && apt-get install -y \
@@ -15,23 +13,22 @@ RUN apt-get update --fix-missing && apt-get install -y \
         python3-colcon-common-extensions \
         python3-rosdep \
         python3-vcstool && \
-    apt-get upgrade -y
+    apt-get upgrade -y && \
     # build & install ROSbot XL packages
-COPY . .
-RUN source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+    source "/opt/ros/$ROS_DISTRO/setup.bash" && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    colcon build --merge-install
+    colcon build --merge-install && \
     # make the image smaller
-    # export SUDO_FORCE_REMOVE=yes && \
-    # apt-get remove -y \
-    #     python3-pip \
-    #     python3-colcon-common-extensions \
-    #     python3-rosdep \
-    #     python3-vcstool && \   
-    # apt-get autoremove -y && \
-    # apt-get clean && \
-    # rm -rf /var/lib/apt/lists/*
+    export SUDO_FORCE_REMOVE=yes && \
+    apt-get remove -y \
+        python3-pip \
+        python3-colcon-common-extensions \
+        python3-rosdep \
+        python3-vcstool && \   
+    apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/ros2_ws/ros_entrypoint.sh"]
 
