--- a/demo/compose.simulation.yaml
+++ b/demo/compose.simulation.yaml
@@ -15,3 +15,19 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./../src:/ros2_ws/src
     command: ros2 launch rosbot_xl_gazebo sim.launch.py
+
+  nav2:
+    image: husarion/nav2:galactic
+    restart: unless-stopped
+    volumes:
+      - ../config/nav2:/ros2_ws/src/husarion_nav2/config
+    command: ros2 launch husarion_nav2 navigation2_bringup.launch.py
+
+  rviz:
+    image: husarion/rviz2:galactic
+    restart: unless-stopped
+    volumes: 
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - ./../config/rviz/rbxl.rviz:/root/.rviz2/default.rviz
+    environment:
+      - DISPLAY
