--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -7,12 +7,15 @@ WORKDIR /ros2_ws
 
 COPY . .
 
+ENV RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+
 # install everything needed
 RUN apt-get update --fix-missing && apt-get install -y \
         python3-pip \
         python3-colcon-common-extensions \
         python3-rosdep \
-        python3-vcstool && \
+        python3-vcstool \
+        ros-${ROS_DISTRO}-rmw-fastrtps-cpp && \
     apt-get upgrade -y && \
     # build & install ROSbot XL packages
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
