--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -11,26 +11,14 @@ ENV RMW_IMPLEMENTATION=rmw_fastrtps_cpp
 
 # install everything needed
 RUN apt-get update --fix-missing && apt-get install -y \
-        python3-pip \
-        python3-colcon-common-extensions \
-        python3-rosdep \
-        python3-vcstool \
         ros-${ROS_DISTRO}-rmw-fastrtps-cpp && \
-    apt-get upgrade -y && \
     # build & install ROSbot XL packages
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
+    rosdep init && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
     colcon build --symlink-install && \
     # make the image smaller
-    export SUDO_FORCE_REMOVE=yes && \
-    apt-get remove -y \
-        python3-pip \
-        python3-colcon-common-extensions \
-        python3-rosdep \
-        python3-vcstool && \   
-    apt-get autoremove -y && \
-    apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/ros2_ws/ros_entrypoint.sh"]
