--- a/Dockerfile.simulation
+++ b/Dockerfile.simulation
@@ -16,7 +16,7 @@ RUN apt-get update --fix-missing && apt-get install -y \
     source "/opt/ros/$ROS_DISTRO/setup.bash" && \
     rosdep update --rosdistro $ROS_DISTRO && \
     rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y && \
-    colcon build --symlink-install && \
+    colcon build --merge-install && \
     # make the image smaller
     rm -rf /var/lib/apt/lists/*
 
