--- a/config/nav2/nav2_slam_params.yaml
+++ b/config/nav2/nav2_slam_params.yaml
@@ -19,7 +19,7 @@ slam_toolbox:
     throttle_scans: 1
     transform_publish_period: 0.2 #if 0 never publishes odometry
     map_update_interval: 1.0
-    resolution: 0.04
+    resolution: 0.05
     max_laser_range: 12.0 #for rastering images
     minimum_time_interval: 0.05
     transform_timeout: 0.5
@@ -127,6 +127,7 @@ controller_server:
       xy_goal_tolerance: 0.1
       yaw_goal_tolerance: 0.15
       stateful: True
+
     # DWB parameters
     FollowPath:
       # Shim controller first rotates robot in place to orientation of global path
@@ -141,51 +142,71 @@ controller_server:
       simulate_ahead_time: 1.0
 
       debug_trajectory_details: True
+
       min_vel_x: 0.0
-      min_vel_y: 0.0
       max_vel_x: 0.26
-      max_vel_y: 0.0
-      max_vel_theta: 1.0
-      min_speed_xy: 0.0
+      acc_lim_x: 0.5
+      decel_lim_x: -0.5
+      min_speed_xy: 0.007
       max_speed_xy: 0.26
-      min_speed_theta: 0.0
-      acc_lim_x: 2.5
+
+      max_vel_theta: 1.0
+      min_speed_theta: 0.4
+      acc_lim_theta: 4.0
+      decel_lim_theta: -4.0
+
+      min_vel_y: 0.0
+      max_vel_y: 0.0
       acc_lim_y: 0.0
-      acc_lim_theta: 3.2
-      decel_lim_x: -2.5
       decel_lim_y: 0.0
-      decel_lim_theta: -3.2
+
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
-      sim_time: 2.5
-      linear_granularity: 0.05
-      angular_granularity: 0.025
+
       transform_tolerance: 1.0
-      xy_goal_tolerance: 0.05
-      trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
+
+      trajectory_generator_name: "dwb_plugins::StandardTrajectoryGenerator"
+      sim_time: 2.5
+      discretize_by_time: False
+      linear_granularity: 0.05
+      angular_granularity: 0.025
+
+      # Critics used for scoring trajectories created by trajectory generator
+      # Final score is a sum of critics' score
       critics:
         [
-          "RotateToGoal",
-          "Oscillation",
           "BaseObstacle",
+          "ObstacleFootprint",
+
           "GoalAlign",
+          "GoalDist",
+
           "PathAlign",
           "PathDist",
-          "GoalDist",
+
+          "RotateToGoal",
+          "Oscillation",
         ]
+
       BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
+
       GoalAlign.scale: 24.0
-      PathAlign.forward_point_distance: 0.1
       GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
       GoalDist.scale: 24.0
+
+      PathAlign.scale: 32.0
+      PathAlign.forward_point_distance: 0.1
+      PathDist.scale: 32.0
+
       RotateToGoal.scale: 32.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
+
+      xy_goal_tolerance: 0.1
+      trans_stopped_velocity: 0.25
 
 controller_server_rclcpp_node:
   ros__parameters:
