--- a/src/rosbot_xl_ekf/config/ekf.yaml
+++ b/src/rosbot_xl_ekf/config/ekf.yaml
@@ -25,7 +25,7 @@ ekf_filter_node:
         odom0_differential: false
         odom0_relative: false
 
-        imu0: /imu/data_raw
+        imu0: /imu_broadcaster/imu
         imu0_config: [false, false, false, # X , Y , Z
                       false, false, true, # roll , pitch ,yaw
                       false, false, false, # dX , dY , dZ
