--- a/src/rosbot_xl_hardware/package.xml
+++ b/src/rosbot_xl_hardware/package.xml
@@ -17,6 +17,7 @@
   <depend>std_msgs</depend>
   <depend>realtime_tools</depend>
   <depend>diff_drive_controller</depend>
+  <depend>imu_sensor_broadcaster</depend>
 
   <build_depend>pluginlib</build_depend>
   <test_depend>ament_cmake_gtest</test_depend>
