--- a/src/rosbot_xl_bringup/package.xml
+++ b/src/rosbot_xl_bringup/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>rosbot_xl_kinematics</exec_depend>
   <exec_depend>rosbot_xl_description</exec_depend>
   <exec_depend>rosbot_xl_ekf</exec_depend>
+  <exec_depend>laser_filters</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
