--- a/config/nav2/nav2_slam_params.yaml
+++ b/config/nav2/nav2_slam_params.yaml
@@ -18,7 +18,7 @@ slam_toolbox:
     debug_logging: false
     throttle_scans: 1
     transform_publish_period: 0.2 #if 0 never publishes odometry
-    map_update_interval: 1.0
+    map_update_interval: 5.0
     resolution: 0.05
     max_laser_range: 12.0 #for rastering images
     minimum_time_interval: 0.05
@@ -30,10 +30,10 @@ slam_toolbox:
     # General Parameters
     use_scan_matching: true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.2
+    minimum_travel_distance: 0.1
     minimum_travel_heading: 0.1
     scan_buffer_size: 10
-    scan_buffer_maximum_scan_distance: 0.5
+    scan_buffer_maximum_scan_distance: 0.5 # maximum distance between the first and last scans in the scan chain stored for matching
     link_match_minimum_response_fine: 0.1
     link_scan_maximum_distance: 0.75
     loop_search_maximum_distance: 3.0
