Switch to new slam toolbox and navigation2 docker images

--- a/demo/compose.rosbot.lan.yaml
+++ b/demo/compose.rosbot.lan.yaml
@@ -14,6 +14,10 @@ services:
     network_mode: host
     ipc: host
 
+  slam-toolbox:
+    network_mode: host
+    ipc: host
+
   rplidar:
     network_mode: host
     ipc: host
