--- a/demo/compose.rosbot.yaml
+++ b/demo/compose.rosbot.yaml
@@ -16,11 +16,23 @@ services:
     command: udp4 --port 8888
 
   nav2:
-    image: husarion/nav2:galactic
+    image: husarion/navigation2:galactic
     restart: unless-stopped
     volumes:
-      - ../config/nav2:/ros2_ws/src/husarion_nav2/config
-    command: ros2 launch husarion_nav2 navigation2_bringup.launch.py use_slam:=True
+      - ../config/nav2_params.yaml:/nav2_params.yaml
+    command: >
+      ros2 launch nav2_bringup navigation_launch.py    
+        params_file:=/nav2_params.yaml
+
+  slam-toolbox:
+    image: husarion/slam-toolbox:galactic
+    restart: unless-stopped
+    volumes:
+      - ../config/slam_toolbox_params.yaml:/slam_params.yaml
+      # - ./maps:/maps
+    command: >
+      ros2 launch slam_toolbox online_sync_launch.py 
+        slam_params_file:=/slam_params.yaml
 
   rplidar:
     image: husarion/rplidar:galactic
