Change ekf parameters

--- a/src/rosbot_xl_ekf/config/ekf.yaml
+++ b/src/rosbot_xl_ekf/config/ekf.yaml
@@ -1,9 +1,9 @@
-### ukf config file ###
+### ekf config file ###
 ekf_filter_node:
     ros__parameters:
-        predict_to_current_time: true
+        predict_to_current_time: false
         frequency: 25.0
-        sensor_timeout: 0.1
+        sensor_timeout: 0.04
         two_d_mode: true
         print_diagnostics: true
         publish_tf: true
