Add behaviour tree without replanning global path

--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -10,7 +10,7 @@ bt_navigator:
     # groot_zmq_publisher_port: 1666
     # groot_zmq_server_port: 1667
 
-    default_bt_xml_filename: "default_bt_xml_filename"
+    default_nav_to_pose_bt_xml: /navigate_w_recovery.xml
     plugin_lib_names:
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_follow_path_action_bt_node
