--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -44,27 +44,28 @@ bt_navigator_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: False
+
     controller_frequency: 10.0
+
+    # if velocity is below threshold value it is set to 0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
-    progress_checker_plugin: "progress_checker"
-    goal_checker_plugin: "goal_checker"
-    controller_plugins: ["FollowPath"]
 
-    # Progress checker parameters
+    progress_checker_plugin: "progress_checker"
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 10.0
-    # Goal checker parameters
+
+    goal_checker_plugin: "goal_checker"
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.1
       yaw_goal_tolerance: 0.25
-      stateful: True
+      stateful: True # if stateful is true goal checker will not check if the xy position matches again once it is found to be true.
 
-    # DWB parameters
+    controller_plugins: ["FollowPath"]
     FollowPath:
       # Shim controller first rotates robot in place to orientation of global path
       # and the switches to DWB - otherwise DWB won't turn in place, but with arc, which
@@ -102,7 +103,6 @@ controller_server:
 
       transform_tolerance: 1.0
       short_circuit_trajectory_evaluation: True
-      stateful: True
 
       trajectory_generator_name: "dwb_plugins::StandardTrajectoryGenerator"
       sim_time: 0.75 # low value to avoid slow movement near goal
@@ -137,12 +137,11 @@ controller_server:
       PathAlign.forward_point_distance: 0.1
       PathDist.scale: 32.0
 
+      xy_goal_tolerance: 0.1
+      trans_stopped_velocity: 0.25
       RotateToGoal.scale: 32.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
-
-      xy_goal_tolerance: 0.1
-      trans_stopped_velocity: 0.25
 
 controller_server_rclcpp_node:
   ros__parameters:
@@ -151,21 +150,24 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      use_sim_time: False
+
       global_frame: odom
       robot_base_frame: base_link
-      use_sim_time: False
-      rolling_window: true
+
+      update_frequency: 5.0
+      publish_frequency: 2.0
+
       width: 6
       height: 6
       resolution: 0.05
+
+      always_send_full_costmap: True
+      rolling_window: True
+
       footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
+
       plugins: ["voxel_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -186,9 +188,11 @@ local_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 1.5
           obstacle_min_range: 0.0
-      static_layer:
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
+      inflation_layer:
+        plugin: "nav2_costmap_2d::InflationLayer"
+        cost_scaling_factor: 3.0
+        inflation_radius: 0.55
+
   local_costmap_client:
     ros__parameters:
       use_sim_time: False
@@ -199,14 +203,20 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
-      publish_frequency: 1.0
+      use_sim_time: False
+
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: False
-      footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
+
+      update_frequency: 1.0
+      publish_frequency: 1.0
+
       resolution: 0.05
-      track_unknown_space: true
+
+      always_send_full_costmap: True
+      track_unknown_space: True # if false, treats unknown space as free space, else as unknown space
+
+      footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
@@ -226,7 +236,7 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
-      always_send_full_costmap: True
+
   global_costmap_client:
     ros__parameters:
       use_sim_time: False
@@ -237,8 +247,8 @@ global_costmap:
 planner_server:
   ros__parameters:
     use_sim_time: False
-    planner_plugins: ["GridBased"]
 
+    planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_smac_planner/SmacPlanner2D"
       tolerance: 0.125 # tolerance for planning if unable to reach exact pose, in meters, for 2D node
@@ -280,21 +290,22 @@ planner_server:
             max_num_line_search_direction_restarts: 10
             max_line_search_step_expansion: 50
 
-    # GridBased:
-    #   plugin: "nav2_navfn_planner/NavfnPlanner"
-    #   tolerance: 0.2
-    #   use_astar: false
-    #   allow_unknown: true
-
 planner_server_rclcpp_node:
   ros__parameters:
     use_sim_time: False
 
 recoveries_server:
   ros__parameters:
+    use_sim_time: False
+
+    global_frame: odom
+    robot_base_frame: base_link
+    transform_timeout: 0.1
+
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
+
     recovery_plugins: ["spin", "backup", "wait"]
     spin:
       plugin: "nav2_recoveries/Spin"
@@ -302,11 +313,11 @@ recoveries_server:
       plugin: "nav2_recoveries/BackUp"
     wait:
       plugin: "nav2_recoveries/Wait"
-    global_frame: odom
-    robot_base_frame: base_link
-    transform_timeout: 0.1
-    use_sim_time: False
+
+    # spin & backup
     simulate_ahead_time: 2.0
+
+    # spin
     max_rotational_vel: 1.0
     min_rotational_vel: 0.4
     rotational_acc_lim: 3.2
