--- a/demo/compose.rosbot.hardware.yaml
+++ b/demo/compose.rosbot.hardware.yaml
@@ -3,21 +3,21 @@
 
 services:
   rosbot-xl:
-    image: husarion/rosbot-xl:galactic
-    # build:
-    #   context: ./../
-    #   dockerfile: ./Dockerfile.hardware
+    image: husarion/rosbot-xl:humble
+    build:
+      context: ./../
+      dockerfile: ./Dockerfile.hardware
     restart: unless-stopped
     command: ros2 launch rosbot_xl_bringup bringup.launch.py
 
   microros:
-    image: microros/micro-ros-agent:galactic
+    image: microros/micro-ros-agent:humble
     restart: unless-stopped
     command: udp4 --port 8888
 
   rplidar:
-    image: husarion/rplidar:galactic
+    image: husarion/rplidar:humble
     restart: unless-stopped
     devices:
       - /dev/ttyUSB0
-    command: ros2 launch rplidar_ros2 rplidar_s1_launch.py inverted:=true
+    command: ros2 launch rplidar_ros rplidar.launch.py inverted:=true
