--- a/demo/test/compose.pc.yaml
+++ b/demo/test/compose.pc.yaml
@@ -1,14 +1,13 @@
-
 # Quick Start
 # $ xhost local:root
 # $ docker compose -f compose.pc.yaml up
 
 services:
   rviz:
-    image: husarion/rviz2:galactic
+    image: husarion/rviz2:humble
     network_mode: service:husarnet-pc
     ipc: service:husarnet-pc
-    volumes: 
+    volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./../../config/rviz/rbxl.rviz:/root/.rviz2/default.rviz
     environment:
@@ -39,7 +38,7 @@ services:
     volumes:
       - /var/lib/husarnet
     sysctls:
-      - net.ipv6.conf.all.disable_ipv6=0 
+      - net.ipv6.conf.all.disable_ipv6=0
     cap_add:
       - NET_ADMIN
     devices:
