--- a/demo/test/compose.rosbot.yaml
+++ b/demo/test/compose.rosbot.yaml
@@ -3,7 +3,7 @@
 
 services:
   rplidar:
-    image: husarion/rplidar:galactic
+    image: husarion/rplidar:humble
     network_mode: service:husarnet-rosbot
     ipc: service:husarnet-rosbot
     devices:
@@ -32,7 +32,7 @@ services:
     volumes:
       - /var/lib/husarnet
     sysctls:
-      - net.ipv6.conf.all.disable_ipv6=0 
+      - net.ipv6.conf.all.disable_ipv6=0
     cap_add:
       - NET_ADMIN
     devices:
