Fix build warnings

--- a/src/rosbot_xl_ekf/setup.cfg
+++ b/src/rosbot_xl_ekf/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/rosbot_xl_ukf
+script_dir=$base/lib/rosbot_xl_ukf
 [install]
-install-scripts=$base/lib/rosbot_xl_ukf
+install_scripts=$base/lib/rosbot_xl_ukf
