--- a/src/rosbot_xl_kinematics/setup.cfg
+++ b/src/rosbot_xl_kinematics/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/rosbot_xl_kinematics
+script_dir=$base/lib/rosbot_xl_kinematics
 [install]
-install-scripts=$base/lib/rosbot_xl_kinematics
+install_scripts=$base/lib/rosbot_xl_kinematics
