--- a/src/rosbot_xl_hardware/package.xml
+++ b/src/rosbot_xl_hardware/package.xml
@@ -3,24 +3,17 @@
 <package format="3">
   <name>rosbot_xl_hardware</name>
   <version>1.0.0</version>
-  <description>Rosbot XL hardware controller</description>
+  <description>Hardware configuration for ROSbot XL</description>
+  <maintainer email="contact@husarion.com">Husarion</maintainer>
   <license>Apache License 2.0</license>
-  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
-  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  
-  <depend>hardware_interface</depend>
-  <depend>controller_interface</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>realtime_tools</depend>
-  <depend>diff_drive_controller</depend>
-  <depend>imu_sensor_broadcaster</depend>
 
-  <build_depend>pluginlib</build_depend>
-  <test_depend>ament_cmake_gtest</test_depend>
+  <exec_depend>rosbot_xl_description</exec_depend>
+  <exec_depend>rosbot_hardware_interfaces</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>diff_drive_controller</exec_depend>
+  <exec_depend>imu_sensor_broadcaster</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
